--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -15,7 +15,7 @@ layout: default
       </div>
     </header>
     {% if post.image %}
-      <a href="{{ post.url | relative_url }}" class="image featured"><img src="/post-img/{{ post.category }}/{{ post.image }}" alt="{{ post.title }}"></a>
+      <a href="{{ post.url | relative_url }}" class="image featured"><img src="../post-img/{{ post.category }}/{{ post.image }}" alt="{{ post.title }}"></a>
     {% endif %}
     {% if post.preview != 0 %}
       <p>{{ post.content | truncatewords: 35 }}</p>
