--- a/_includes/index-footer.html
+++ b/_includes/index-footer.html
@@ -8,10 +8,10 @@
               </header>
             </section>
             <section class="blurb">
-              <h2>О сайте</h2>
+              <h2>About</h2>
               <p>{{ site.description }}</p>
               <ul class="actions">
-                <li><a href="//github.com/vikapitoshka/blog" class="button">Fork me</a></li>
+                <li><a href="//github.com/silent-han/csestudy" class="button">Fork me</a></li>
               </ul>
             </section>
  
