--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
   <header> 
     <div class="title">
       <h2>{{ page.title | escape }}</h2>
-      <p><a href="//github.com/silent-han/csestudy/edit/main/{{ page.path }}" class="icon"><i class="fas fa-fw fa-edit"></i> GitHub</a></p>
+      <p><a href="//github.com/silent-han/csestudy/edit/main/{{ page.path }}" class="icon"><i class="fas fa-fw fa-edit"></i> GitHub </a></p>
     </div>
     <div class="meta">
       <time class="published" datetime="{{ page.date }}">{{ page.date | date: "%d %b %Y %R" }}</time>
@@ -13,11 +13,9 @@ layout: default
     </div>
   </header>
   {{ content }}
-  
-  <p>Подписывайтесь на наш <a href="http://t.me/vikablog">канал</a> в телеграмме :)
   <footer>
     <ul class="stats">
-      <li><a class="icon" href="{{ site.url }}"><i class="fas fa-fw fa-folder"></i> Главная</a></li>
+      <li><a class="icon" href="{{ site.url }}"><i class="fas fa-fw fa-folder"></i> Home </a></li>
       <li><a href="//github.com/silent-han/csestudy/edit/main/{{ page.path }}" class="icon"><i class="fas fa-fw fa-edit"></i> Edit</a></li>
     </ul>
   </footer>
