edit home address

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ layout: default
   {{ content }}
   <footer>
     <ul class="stats">
-      <li><a class="icon" href="{{ site.url }}"><i class="fas fa-fw fa-folder"></i> Home </a></li>
+      <li><a class="icon" href="{{ site.url }}/{{ site.baseurl }}"><i class="fas fa-fw fa-folder"></i> Home </a></li>
       <li><a href="//github.com/silent-han/csestudy/edit/main/{{ page.path }}" class="icon"><i class="fas fa-fw fa-edit"></i> Edit</a></li>
     </ul>
   </footer>
