--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,12 +6,12 @@ layout: default
   <article class="post">
     <header>
       <div class="title">
-      <span class="image left image-icon"><a href="{{ post.url | relative_url }}"><img src="{{ site.baseurl}}/images/{{ post.icon }}.svg" style="width: 4em;" alt="{{ post.icon }}"></a></span>
+      <span class="image left image-icon"><a href="{{ post.url | relative_url }}"><img src="images/{{ post.icon }}.svg" style="width: 4em;" alt="{{ post.icon }}"></a></span>
         <h2><a href="{{ post.url | relative_url }}">{{ post.title | escape }}</a></h2>
       </div>
       <div class="meta">
         <time class="published" datetime="{{ post.date }}">{{ post.date | date: "%d %b %Y %R" }}</time>
-        <a href="{{ site.author.cv }}" class="author"><span class="name">{{ site.author.last_name }}</span><img src="{{ site.author.avatar | prepend: site.baseurl }}" alt="VKapitonenko" /></a>
+        <a href="{{ site.author.cv }}" class="author"><span class="name">{{ site.author.last_name }}</span><img src="{{ site.author.avatar | prepend: site.baseurl }}" alt="Han" /></a>
       </div>
     </header>
     {% if post.image %}
