home.html post.href

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -25,7 +25,7 @@ layout: default
         <li><a href="{{ post.url | relative_url }}" class="button big">자세히 보기</a></li>
       </ul>
       <ul class="stats">
-        <li><a class="icon" href="{{ site.baseurl }}/{{ post.category }}"><i class="fas fa-fw fa-folder"></i> {{ post.category }}</a></li>
+        <li><a class="icon" href="{{ site.baseurl }}/{{ post.href }}"><i class="fas fa-fw fa-folder"></i> {{ post.category }}</a></li>
         <li><a href="//github.com/silent-han/csestudy/edit/main/{{ post.path }}" class="icon"><i class="fas fa-fw fa-edit"></i> Edit</a></li>
       </ul>
     </footer>
